update: fix signup api